--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 
 	<meta charset="utf-8">
 	
-	<title>Model Inventory</title>	
+	<title>BaconStash ToDo</title>	
 	
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes">
